helm-hub/values/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pv-pvc
spec:
  containers:
  - image: luksa/kubia:latest
    imagePullPolicy: IfNotPresent
    name: kubia
    volumeMounts:
    - name: nsf
      mountPath: /data
    ports:
    - containerPort: 27017
      protocol: TCP
  volumes:
  - name: nsf
    persistentVolumeClaim:
      claimName: base-nfs-pvc
